--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "ts-markdown": "^1.2.0",
+    "js-yaml": "^4.1.0",
     "zod": "^3.24.1"
   },
   "description": "A GitHub action to update the README.md file with the latest version of the package.",
@@ -22,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
     "eslint": "^9.19.0",
+    "@types/js-yaml": "^4.0.9",
     "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.31.0",
@@ -52,10 +53,11 @@
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "*"
   },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/Coderrob/update-action-readme.git"
   },
   "scripts": {
     "all": "npm run lint:fix && npm run lint && npm run test && npm run coverage && npm run package",
