--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "js-yaml": "^4.1.0",
+    "ts-markdown": "^1.2.0",
     "zod": "^3.24.1"
   },
   "description": "A GitHub action to update the README.md file with the latest version of the package.",
@@ -37,7 +38,8 @@
     "ts-jest": "^29.2.5",
     "ts-jest-resolver": "^2.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "zod-to-json-schema": "^3.24.1"
   },
   "engines": {
     "node": ">=20"
