chore: add a little more description to action and allow for default values

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,10 @@
-name: Update README with Action Metadata
-description: Update README with action metadata.
 author: 'Robert Lindley'
+name: Update README with Action Metadata
+description:
+  Updates a README.md file with metadata from an action's YAML configuration
+  file. This includes information such as the action name, description, inputs,
+  outputs, and other relevant details. This ensures that the README is always
+  up-to-date with the latest information about the action.
 
 branding:
   color: 'green'
@@ -8,15 +12,17 @@ branding:
 
 inputs:
   readme-file-path:
-    description: "The path to the README file. Defaults to 'README.md'."
+    description:
+      The path to the README.md file that should be updated. This is relative to
+      the repository root. If not specified, it defaults to 'README.md'.
     required: false
     default: 'README.md'
 
   action-yaml-path:
     description:
-      The path to the action's YAML configuration file. This defaults to
-      'action.yml'.
-    required: true
+      The path to the YAML configuration file for the action. This is relative
+      to the repository root. If not specified, it defaults to 'action.yml'.
+    required: false
     default: 'action.yml'
 
 runs:
