feat: setup devcontainer and updated lock file

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,4 @@
 {
-  "name": "GitHub Actions (TypeScript)",
-  "image": "mcr.microsoft.com/devcontainers/typescript-node:20",
-  "postCreateCommand": "npm install",
   "customizations": {
     "codespaces": {
       "openFiles": ["README.md"]
@@ -12,30 +9,29 @@
         "davidanson.vscode-markdownlint",
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
-        "github.copilot",
-        "github.copilot-chat",
-        "github.vscode-github-actions",
-        "github.vscode-pull-request-github",
-        "me-dutour-mathieu.vscode-github-actions",
         "redhat.vscode-yaml",
         "rvest.vs-code-prettier-eslint",
         "yzhang.markdown-all-in-one"
       ],
       "settings": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.tabSize": 2,
         "editor.formatOnSave": true,
-        "markdown.extension.list.indentationSize": "adaptive",
+        "editor.tabSize": 2,
         "markdown.extension.italic.indicator": "_",
+        "markdown.extension.list.indentationSize": "adaptive",
         "markdown.extension.orderedList.marker": "one"
       }
     }
   },
+  "features": {
+    "ghcr.io/devcontainers-contrib/features/prettier:1": {},
+    "ghcr.io/devcontainers/features/github-cli:1": {},
+    "ghcr.io/dhoeric/features/act:1": {}
+  },
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:20",
+  "name": "Update Action README",
+  "postCreateCommand": "npm install",
   "remoteEnv": {
     "GITHUB_TOKEN": "${localEnv:GITHUB_TOKEN}"
-  },
-  "features": {
-    "ghcr.io/devcontainers/features/github-cli:1": {},
-    "ghcr.io/devcontainers-contrib/features/prettier:1": {}
   }
 }
