chore: cleanup build put and act testing

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -2,15 +2,17 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "allowJs": true,
-    "noEmit": true
+    "noEmit": true,
+    "target": "es5"
   },
   "exclude": ["dist", "node_modules"],
-  "extends": "./tsconfig.base.json",
+  "extends": "./tsconfig.json",
   "include": [
-    "__tests__",
-    "src",
+    "/__mocks__/",
+    "/__tests__/",
     "eslint.config.mjs",
     "jest.config.js",
-    "rollup.config.ts"
+    "rollup.config.ts",
+    "src/**/*"
   ]
 }
