--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,35 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "extends": "./tsconfig.base.json",
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "declaration": false,
+    "declarationMap": false,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "inlineSourceMap": true,
+    "inlineSources": true,
+    "lib": ["ES2022"],
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "outDir": "./dist"
+    "newLine": "lf",
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": false,
+    "outDir": "./dist",
+    "pretty": true,
+    "resolveJsonModule": true,
+    "sourceMap": false,
+    "strict": true,
+    "strictNullChecks": true,
+    "target": "ES2022",
+    "useUnknownInCatchVariables": true
   },
-  "exclude": ["__mocks__", "__tests__", "coverage", "dist", "node_modules"],
-  "include": ["src"]
+  "exclude": [
+    "/__mocks__/",
+    "<rootDir>/__tests__",
+    "<rootDir>/coverage",
+    "<rootDir>/node_modules",
+    "dist"
+  ],
+  "include": ["src/**/*"]
 }
