--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -2,17 +2,23 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
     "allowJs": true,
+    "declaration": true,
+    "declarationMap": true,
+    "esModuleInterop": true,
+    "inlineSourceMap": false,
+    "inlineSources": false,
     "noEmit": true,
+    "sourceMap": true,
     "target": "es5"
   },
   "exclude": ["dist", "node_modules"],
   "extends": "./tsconfig.json",
   "include": [
-    "/__mocks__/",
-    "/__tests__/",
+    "__mocks__",
+    "__tests__",
+    "src",
     "eslint.config.mjs",
-    "jest.config.js",
-    "rollup.config.ts",
-    "src/**/*"
+    "jest.config.mjs",
+    "rollup.config.ts"
   ]
 }
