--- a/package.json
+++ b/package.json
@@ -9,37 +9,36 @@
     "ts-markdown": "^1.2.0",
     "zod": "^3.24.1"
   },
-  "description": "A GitHub action to update the README.md file with the latest version of the package.",
+  "description": "A GitHub Action to update the README.md file with the latest version of a package.",
   "devDependencies": {
-    "@eslint/compat": "^1.2.5",
-    "@github/local-action": "^2.5.1",
+    "@eslint/compat": "^1.2.6",
+    "@github/local-action": "^2.6.1",
     "@jest/globals": "^29.7.0",
-    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.1",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/jest": "^29.5.14",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^20.17.16",
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@typescript-eslint/parser": "^8.22.0",
+    "@types/node": "^22.13.1",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
     "cross-env": "^7.0.3",
-    "eslint": "^9.19.0",
+    "eslint": "^9.20.0",
     "eslint-config-prettier": "^10.0.1",
-    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.7.0",
     "make-coverage-badge": "^1.2.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.0",
     "prettier-eslint": "^16.3.0",
-    "rollup": "^4.32.1",
+    "rollup": "^4.34.6",
     "ts-jest": "^29.2.5",
     "ts-jest-resolver": "^2.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3",
-    "zod-to-json-schema": "^3.24.1"
+    "typescript": "^5.7.3"
   },
   "engines": {
     "node": ">=20"
@@ -49,10 +48,14 @@
   },
   "homepage": "https://github.com/Coderrob/update-action-readme",
   "keywords": [
-    "actions"
+    "actions",
+    "github",
+    "documentation",
+    "readme",
+    "automation"
   ],
   "license": "MIT",
-  "name": "typescript-action",
+  "name": "update-action-readme",
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "*"
   },
@@ -73,8 +76,8 @@
     "lint:fix": "npm run format && npx eslint . --fix",
     "package": "npx rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "package:watch": "npm run package -- --watch",
-    "test": "cross-env NODE_OPTIONS=\"--experimental-vm-modules\" NODE_NO_WARNINGS=1 npx jest"
+    "test": "cross-env npx jest"
   },
   "type": "module",
-  "version": "1.1.0"
+  "version": "1.1.1"
 }
