--- a/.github/workflows/create-sbom.yml
+++ b/.github/workflows/create-sbom.yml
@@ -6,6 +6,10 @@ on:
     branches:
       - main
 
+concurrency:
+  group: ${{ github.ref }}-${{ github.job }}
+  cancel-in-progress: true
+
 defaults:
   run:
     shell: bash
