--- a/.github/workflows/create-sbom.yml
+++ b/.github/workflows/create-sbom.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate SBOM
+        id: generate-sbom
         # generation command documentation: https://github.com/microsoft/sbom-tool#sbom-generation
         run: |
           curl -Lo $RUNNER_TEMP/sbom-tool https://github.com/microsoft/sbom-tool/releases/latest/download/sbom-tool-linux-x64
@@ -35,6 +36,7 @@ jobs:
           $RUNNER_TEMP/sbom-tool generate -b . -bc . -pn $ -pv 1.0.0 -ps coderrob -nsb https://coderrob.com -V Verbose
 
       - name: Upload SBOM Artifact
+        id: upload-sbom-artifact
         uses: actions/upload-artifact@v4
         with:
           name: sbom
