--- a/.github/workflows/create-sbom.yml
+++ b/.github/workflows/create-sbom.yml
@@ -31,9 +31,9 @@ jobs:
         id: generate-sbom
         # generation command documentation: https://github.com/microsoft/sbom-tool#sbom-generation
         run: |
-          curl -Lo $RUNNER_TEMP/sbom-tool https://github.com/microsoft/sbom-tool/releases/latest/download/sbom-tool-linux-x64
-          chmod +x $RUNNER_TEMP/sbom-tool
-          "$RUNNER_TEMP/sbom-tool" generate -b . -bc . -pn $ -pv 1.0.0 -ps coderrob -nsb https://coderrob.com -V Verbose
+          curl -Lo "$RUNNER_TEMP/sbom-tool" "https://github.com/microsoft/sbom-tool/releases/latest/download/sbom-tool-linux-x64"
+          chmod +x "$RUNNER_TEMP/sbom-tool"
+          "$RUNNER_TEMP/sbom-tool" generate -b . -bc . -pn "$PROJECT_NAME" -pv "1.0.0" -ps "coderrob" -nsb "https://coderrob.com" -V "Verbose"
 
       - name: Upload SBOM Artifact
         id: upload-sbom-artifact
