chore: add explicit none for top level perm for sbom

--- a/.github/workflows/create-sbom.yml
+++ b/.github/workflows/create-sbom.yml
@@ -10,6 +10,8 @@ concurrency:
   group: ${{ github.ref }}-${{ github.job }}
   cancel-in-progress: true
 
+permissions: {}
+
 defaults:
   run:
     shell: bash
