--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -3,10 +3,16 @@ name: Update README
 on:
   workflow_dispatch:
   push:
-    paths: |
-      action.yml
+    paths:
+      - ./action.yml
     branches:
       - main
+
+concurrency:
+  group: ${{ github.ref }}-${{ github.job }}
+  cancel-in-progress: true
+
+permissions: {}
 
 defaults:
   run:
@@ -27,11 +33,11 @@ jobs:
       - name: Update README
         uses: coderrob/update-action-readme@main
         with:
-          action-yaml-path: 'action.yml'
-          readme-file-path: 'README.md'
+          action-file-path: ./action.yml
+          readme-file-path: ./README.md
 
       - name: Upload README
         uses: actions/upload-artifact@v4
         with:
           name: Update Readme with latest version of the action.
-          path: README.md
+          path: ./README.md
