--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,38 +12,43 @@ defaults:
   run:
     shell: bash
 
+concurrency:
+  group: ${{ github.ref }}-${{ github.job }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
   packages: read
   statuses: write
 
 jobs:
-  unit-test:
-    name: Unit Testing
+  lint-check:
+    name: Linting
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Source
         id: checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node
         id: setup-node
         uses: actions/setup-node@v4
         with:
-          node-version-file: .node-version
+          node-version-file: .nvmrc
           cache: npm
 
       - name: Install Dependencies
-        id: npm-ci
-        run: npm ci
+        id: install-dependencies
+        run: npm install
 
       - name: Style Check
-        id: npm-format-check
+        id: style-check
         run: npm run format:check
 
       - name: Lint Check
-        id: npm-lint
+        id: lint-check
         run: npm run lint
 
       - name: Lint Codebase
@@ -62,11 +67,35 @@ jobs:
           VALIDATE_JSON: false
           VALIDATE_TYPESCRIPT_STANDARD: false
 
+  unit-test:
+    needs: lint-check
+    name: Unit Testing
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Source
+        id: checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        id: setup-node
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: .nvmrc
+          cache: npm
+
+      - name: Install Dependencies
+        id: install-dependencies
+        run: npm install
+
       - name: Unit Tests
-        id: npm-ci-test
-        run: npm run ci-test
+        id: unit-test
+        run: npm run test
 
   integration-test:
+    needs:
+      - lint-check
+      - unit-test
     name: Integration Testing
     runs-on: ubuntu-latest
 
@@ -76,7 +105,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Integration Test
-        id: test-action
+        id: integration-test
         uses: ./
         with:
-          action-yaml-path: ./action.yml
+          action-file-path: ./action.yml
+          readme-file-path: ./README.md
