--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -13,12 +13,9 @@ on:
   pull_request:
     branches:
       - main
-  push:
-    branches:
-      - main
 
 concurrency:
-  group: ${{ github.ref }}-${{ github.job }}
+  group: dist-${{ github.ref }}-${{ github.job }}
   cancel-in-progress: true
 
 permissions:
@@ -42,7 +39,7 @@ jobs:
           cache: npm
 
       - name: Install Dependencies
-        id: install
+        id: install-dependencies
         run: npm ci
 
       - name: Build dist/ Directory
@@ -64,13 +61,3 @@ jobs:
             git diff --ignore-space-at-eol --text dist/
             exit 1
           fi
-
-      # If `dist/` was different than expected, upload the expected version as a
-      # workflow artifact.
-      - if: ${{ failure() && steps.diff.outcome == 'failure' }}
-        name: Upload Artifact
-        id: upload
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: dist/
