--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@actions/core": "^1.11.1",
+    "@actions/exec": "^1.1.1",
     "js-yaml": "^4.1.0",
     "ts-markdown": "^1.2.0",
     "zod": "^3.24.1"
