--- a/action.yml
+++ b/action.yml
@@ -32,6 +32,7 @@ inputs:
     default: '${{ github.action_repository }}'
 
 outputs: {}
+
 runs:
-  using: 'node20'
-  main: './dist/index.mjs'
+  using: node20
+  main: dist/index.mjs
