--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   },
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "@actions/exec": "^1.1.1",
     "js-yaml": "^4.1.0",
     "ts-markdown": "^1.2.0",
     "zod": "^3.24.1"
@@ -63,7 +62,7 @@
     "url": "git+https://github.com/Coderrob/update-action-readme.git"
   },
   "scripts": {
-    "all": "npm run lint:fix && npm run lint && npm run test && npm run coverage && npm run package",
+    "all": "npm run lint:fix && npm run lint && npm run test:coverage && npm run package",
     "bundle": "npm run lint:fix && npm run package",
     "coverage": "npx make-coverage-badge --output-path ./badges/coverage.svg",
     "format": "npx prettier --write .",
@@ -72,7 +71,8 @@
     "lint:fix": "npm run format && npx eslint . --fix",
     "package": "npx rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "package:watch": "npm run package -- --watch",
-    "test": "cross-env npx jest"
+    "test": "cross-env npx jest",
+    "test:coverage": "npm run test && npm run coverage"
   },
   "type": "module",
   "version": "1.0.0"
