feat: Add NodeRuns and Runs schemas with corresponding types
feat: Implement ContentValidator tests for markdown validation

feat: Create DependencyAnalyzer tests for project dependency analysis

feat: Add StructureAnalyzer tests for directory structure analysis

feat: Implement action tests for README generation from action.yml

feat: Add TemplateEngine tests for markdown template processing

feat: Create AcknowledgmentRenderer and BrandingRenderer tests

test: Add ActionSchema tests for validating Node actions

test: Implement MermaidFlowchartGenerator tests for flowchart generation

chore: Update TypeScript configuration to include tests directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,13 +24,6 @@
     "target": "ES2022",
     "useUnknownInCatchVariables": true
   },
-  "exclude": [
-    "__tests__",
-    "__mocks__",
-    "coverage",
-    "dist",
-    "node_modules",
-    "**/*.(spec|test).(j|t)s"
-  ],
-  "include": ["src"]
+  "exclude": ["__tests__", "__mocks__", "coverage", "dist", "node_modules"],
+  "include": ["src", "tests"]
 }
