--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -17,6 +17,7 @@
     "__mocks__",
     "__tests__",
     "src",
+    "tests",
     "eslint.config.mjs",
     "jest.config.mjs",
     "rollup.config.ts"
